--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         </div>
                     </article>
                 </section>
-                <aside aria-label="second-sidebar" class="sidebar">
+                <aside aria-label="second-sidebar" class="sidebar sidebar-tags">
                     <h2 class="section-title">Tags</h2>
                     <ul class="list tags">
                     </ul>
